crates/reap-strategy/tests/ui/no_forged_execution_intents.stderr
error[E0277]: the trait bound `ChaosExecutionIntent: Clone` is not satisfied
 --> tests/ui/no_forged_execution_intents.rs:7:21
  |
7 |     require_clone::<ChaosExecutionIntent>();
  |                     ^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `ChaosExecutionIntent`
  |
note: required by a bound in `require_clone`
 --> tests/ui/no_forged_execution_intents.rs:4:21
  |
4 | fn require_clone<T: Clone>() {}
  |                     ^^^^^ required by this bound in `require_clone`

error[E0624]: associated function `quote` is private
  --> tests/ui/no_forged_execution_intents.rs:11:35
   |
11 |       let _ = ChaosExecutionIntent::quote(
   |                                     ^^^^^ private associated function
   |
  ::: src/execution.rs
   |
   | /     pub(crate) fn quote(
   | |         symbol: Symbol,
   | |         side: Side,
   | |         qty: Quantity,
   | |         price: Price,
   | |         reason: String,
   | |     ) -> Self {
   | |_____________- private associated function defined here

error[E0624]: associated function `hedge` is private
  --> tests/ui/no_forged_execution_intents.rs:18:35
   |
18 |       let _ = ChaosExecutionIntent::hedge(
   |                                     ^^^^^ private associated function
   |
  ::: src/execution.rs
   |
   | /     pub(crate) fn hedge(
   | |         symbol: Symbol,
   | |         side: Side,
   | |         qty: Quantity,
   | |         price: Price,
   | |         reason: String,
   | |     ) -> Self {
   | |_____________- private associated function defined here

error[E0624]: associated function `cancel_owned` is private
  --> tests/ui/no_forged_execution_intents.rs:25:35
   |
25 |     let _ = ChaosExecutionIntent::cancel_owned("client-1".to_string(), "forged cancel".to_string());
   |                                   ^^^^^^^^^^^^ private associated function
   |
  ::: src/execution.rs
   |
   |     pub(crate) fn cancel_owned(order_id: String, reason: String) -> Self {
   |     -------------------------------------------------------------------- private associated function defined here

error[E0277]: the trait bound `ChaosExecutionIntent: From<OrderIntent>` is not satisfied
  --> tests/ui/no_forged_execution_intents.rs:29:12
   |
29 |     intent.into()
   |            ^^^^ the trait `From<OrderIntent>` is not implemented for `ChaosExecutionIntent`
   |
   = note: required for `OrderIntent` to implement `Into<ChaosExecutionIntent>`
